--- a/composer.json
+++ b/composer.json
@@ -21,40 +21,40 @@
     },
     "require": {
         "php": ">=8.0",
-        "symfony/event-dispatcher": "^5.4|^6.0",
-        "symfony/framework-bundle": "^5.4|^6.0",
-        "symfony/options-resolver": "^5.4|^6.0",
-        "symfony/property-access": "^5.4|^6.0",
-        "symfony/translation": "^5.4|^6.0"
+        "symfony/event-dispatcher": "^5.4|^6.2",
+        "symfony/framework-bundle": "^5.4|^6.2",
+        "symfony/options-resolver": "^5.4|^6.2",
+        "symfony/property-access": "^5.4|^6.2",
+        "symfony/translation": "^5.4|^6.2"
     },
     "require-dev": {
         "ext-curl": "*",
         "ext-json": "*",
         "ext-pdo_sqlite": "*",
         "ext-zip": "*",
-        "doctrine/common": "^2.6|^3.3",
-        "doctrine/doctrine-bundle": "^2.7|^3.0",
-        "doctrine/orm": "^2.13.1",
-        "doctrine/persistence": "^2.0|^3.0.3",
-        "friendsofphp/php-cs-fixer": "^3.9.5",
-        "mongodb/mongodb": "^1.12",
-        "ocramius/package-versions": "^2.5",
-        "phpoffice/phpspreadsheet": "^1.24.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.8.2",
-        "phpstan/phpstan-doctrine": "^1.3.12",
-        "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-symfony": "^1.2.9",
-        "ruflin/elastica": "^6.0|^7.2",
-        "symfony/browser-kit": "^5.4|^6.1.3",
-        "symfony/css-selector": "^5.4|^6.1.3",
-        "symfony/dom-crawler": "^5.4|^6.1.3",
-        "symfony/intl": "^5.4|^6.1",
-        "symfony/mime": "^5.4|^6.1.3",
-        "symfony/phpunit-bridge": "^5.4|^6.1.3",
-        "symfony/twig-bundle": "^5.4|^6.1.1",
-        "symfony/var-dumper": "^5.4|^6.1.3",
-        "symfony/yaml": "^5.4|^6.1.3"
+        "doctrine/common": "^2.13|^3.4",
+        "doctrine/doctrine-bundle": "^2.9|^3.0",
+        "doctrine/orm": "^2.14",
+        "doctrine/persistence": "^2.5|^3.1",
+        "friendsofphp/php-cs-fixer": "^3.14",
+        "mongodb/mongodb": "^1.15",
+        "ocramius/package-versions": "^2.6",
+        "phpoffice/phpspreadsheet": "^1.28",
+        "phpstan/extension-installer": "^1.2",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-symfony": "^1.2",
+        "ruflin/elastica": "^7.3",
+        "symfony/browser-kit": "^5.4|^6.2",
+        "symfony/css-selector": "^5.4|^6.2",
+        "symfony/dom-crawler": "^5.4|^6.2",
+        "symfony/intl": "^5.4|^6.2",
+        "symfony/mime": "^5.4|^6.2",
+        "symfony/phpunit-bridge": "^5.4|^6.2",
+        "symfony/twig-bundle": "^5.4|^6.2",
+        "symfony/var-dumper": "^5.4|^6.2",
+        "symfony/yaml": "^5.4|^6.2"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "For integrated access to Doctrine object managers",
