--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ext-pdo_sqlite": "*",
         "ext-zip": "*",
         "doctrine/common": "^2.13|^3.4",
-        "doctrine/doctrine-bundle": "^2.9|^3.0",
+        "doctrine/doctrine-bundle": "^2.9",
         "doctrine/orm": "^2.14",
         "doctrine/persistence": "^2.5|^3.1",
         "friendsofphp/php-cs-fixer": "^3.14",
