--- a/composer.json
+++ b/composer.json
@@ -21,40 +21,40 @@
     },
     "require": {
         "php": ">=8.0",
-        "symfony/event-dispatcher": "^5.4|^6.2",
-        "symfony/framework-bundle": "^5.4|^6.2",
-        "symfony/options-resolver": "^5.4|^6.2",
-        "symfony/property-access": "^5.4|^6.2",
-        "symfony/translation": "^5.4|^6.2"
+        "symfony/event-dispatcher": "^6.3|^7.0",
+        "symfony/framework-bundle": "^6.3|^7.0",
+        "symfony/options-resolver": "^6.3|^7.0",
+        "symfony/property-access": "^6.3|^7.0",
+        "symfony/translation": "^6.3|^7.0"
     },
     "require-dev": {
         "ext-curl": "*",
         "ext-json": "*",
         "ext-pdo_sqlite": "*",
         "ext-zip": "*",
-        "doctrine/common": "^2.13|^3.4",
-        "doctrine/doctrine-bundle": "^2.9",
-        "doctrine/orm": "^2.14",
+        "doctrine/common": "^3.4",
+        "doctrine/doctrine-bundle": "^2.10",
+        "doctrine/orm": "^2.15",
         "doctrine/persistence": "^2.5|^3.1",
         "friendsofphp/php-cs-fixer": "^3.14",
         "mongodb/mongodb": "^1.15",
-        "ocramius/package-versions": "^2.6",
-        "phpoffice/phpspreadsheet": "^1.28",
+        "ocramius/package-versions": "^2.8",
+        "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
-        "phpstan/phpstan-symfony": "^1.2",
+        "phpstan/phpstan-symfony": "^1.3",
         "ruflin/elastica": "^7.3",
-        "symfony/browser-kit": "^5.4|^6.2",
-        "symfony/css-selector": "^5.4|^6.2",
-        "symfony/dom-crawler": "^5.4|^6.2",
-        "symfony/intl": "^5.4|^6.2",
-        "symfony/mime": "^5.4|^6.2",
-        "symfony/phpunit-bridge": "^5.4|^6.2",
-        "symfony/twig-bundle": "^5.4|^6.2",
-        "symfony/var-dumper": "^5.4|^6.2",
-        "symfony/yaml": "^5.4|^6.2"
+        "symfony/browser-kit": "^6.3|^7.0",
+        "symfony/css-selector": "^6.3|^7.0",
+        "symfony/dom-crawler": "^6.3|^7.0",
+        "symfony/intl": "^6.3|^7.0",
+        "symfony/mime": "^6.3|^7.0",
+        "symfony/phpunit-bridge": "^6.3|^7.0",
+        "symfony/twig-bundle": "^6.3|^7.0",
+        "symfony/var-dumper": "^6.3|^7.0",
+        "symfony/yaml": "^6.3|^7.0"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "For integrated access to Doctrine object managers",
