--- a/composer.json
+++ b/composer.json
@@ -34,28 +34,28 @@
         "ext-pdo_sqlite": "*",
         "ext-zip": "*",
         "doctrine/common": "^2.6|^3.3",
-        "doctrine/doctrine-bundle": "^2.7|^3.0",
-        "doctrine/orm": "^2.13.1",
-        "doctrine/persistence": "^2.0|^3.0.3",
-        "friendsofphp/php-cs-fixer": "^3.9.5",
-        "mongodb/mongodb": "^1.12",
-        "ocramius/package-versions": "^2.5",
-        "phpoffice/phpspreadsheet": "^1.24.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.8.2",
+        "doctrine/doctrine-bundle": "^2.10|^3.0",
+        "doctrine/orm": "^2.15",
+        "doctrine/persistence": "^3.0.3",
+        "friendsofphp/php-cs-fixer": "^3.27",
+        "mongodb/mongodb": "^1.15",
+        "ocramius/package-versions": "^2.8",
+        "phpoffice/phpspreadsheet": "^1.29",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3.12",
         "phpstan/phpstan-phpunit": "^1.1",
-        "phpstan/phpstan-symfony": "^1.2.9",
-        "ruflin/elastica": "^6.0|^7.2",
-        "symfony/browser-kit": "^6.1.3|^7.0",
-        "symfony/css-selector": "^6.1.3|^7.0",
-        "symfony/dom-crawler": "^6.1.3|^7.0",
+        "phpstan/phpstan-symfony": "^1.3",
+        "ruflin/elastica": "^7.3",
+        "symfony/browser-kit": "^6.3|^7.0",
+        "symfony/css-selector": "^6.3|^7.0",
+        "symfony/dom-crawler": "^6.3|^7.0",
         "symfony/intl": "^6.1|^7.0",
-        "symfony/mime": "^6.1.3|^7.0",
-        "symfony/phpunit-bridge": "^6.1.3|^7.0",
-        "symfony/twig-bundle": "^6.1.1|^7.0",
-        "symfony/var-dumper": "^6.1.3|^7.0",
-        "symfony/yaml": "^6.1.3|^7.0"
+        "symfony/mime": "^6.3|^7.0",
+        "symfony/phpunit-bridge": "^6.3|^7.0",
+        "symfony/twig-bundle": "^6.3|^7.0",
+        "symfony/var-dumper": "^6.3|^7.0",
+        "symfony/yaml": "^6.3|^7.0"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "For integrated access to Doctrine object managers",
