--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
     "issues": "https://github.com/omines/datatables-bundle/issues"
   },
   "require": {
-    "php": ">=8.1",
-    "symfony/event-dispatcher": "^6.4|^7.1",
-    "symfony/framework-bundle": "^6.4|^7.1",
-    "symfony/options-resolver": "^6.4|^7.1",
-    "symfony/polyfill-mbstring": "^1.31.0",
-    "symfony/property-access": "^6.4|^7.1",
-    "symfony/translation": "^6.4|^7.1"
+    "php": ">=8.4",
+    "symfony/event-dispatcher": "^7.3",
+    "symfony/framework-bundle": "^7.3",
+    "symfony/options-resolver": "^7.3",
+    "symfony/polyfill-mbstring": "^1.32.0",
+    "symfony/property-access": "^7.3",
+    "symfony/translation": "^7.3"
   },
   "require-dev": {
     "ext-curl": "*",
@@ -35,32 +35,32 @@
     "ext-mongodb": "*",
     "ext-pdo_sqlite": "*",
     "ext-zip": "*",
-    "doctrine/common": "^3.4.5",
-    "doctrine/doctrine-bundle": "^2.13.1",
-    "doctrine/orm": "^2.19.3|^3.3.0",
+    "doctrine/common": "^3.5",
+    "doctrine/doctrine-bundle": "^2.15",
+    "doctrine/orm": "^3.5.0",
     "doctrine/persistence": "^3.4.0",
-    "friendsofphp/php-cs-fixer": "^3.65.0",
-    "mongodb/mongodb": "^1.20.0",
-    "ocramius/package-versions": "^2.9",
-    "openspout/openspout": "^4.23",
-    "phpoffice/phpspreadsheet": "^2.3.3|^3.5",
+    "friendsofphp/php-cs-fixer": "^3.84",
+    "mongodb/mongodb": "^2.1.0",
+    "ocramius/package-versions": "^2.10",
+    "openspout/openspout": "^4.30",
+    "phpoffice/phpspreadsheet": "^3.9",
     "phpstan/extension-installer": "^1.4.3",
     "phpstan/phpstan": "^2.0.3",
-    "phpstan/phpstan-doctrine": "^2.0.1",
-    "phpstan/phpstan-phpunit": "^2.0.1",
-    "phpstan/phpstan-symfony": "^2.0.0",
-    "phpunit/phpunit": "^10.5.38|^11.4.4",
-    "ruflin/elastica": "^6.2|^7.3.2",
-    "symfony/browser-kit": "^6.4.13|^7.1",
-    "symfony/css-selector": "^6.4.13|^7.1",
-    "symfony/doctrine-bridge": "^6.4.13|^7.1",
-    "symfony/dom-crawler": "^6.4.13|^7.1",
-    "symfony/intl": "^6.4.13|^7.1",
-    "symfony/mime": "^6.4.13|^7.1",
-    "symfony/phpunit-bridge": "^7.2",
-    "symfony/twig-bundle": "^6.4|^7.1",
-    "symfony/var-dumper": "^6.4.13|^7.1",
-    "symfony/yaml": "^6.4.13|^7.1"
+    "phpstan/phpstan-doctrine": "^2.0.3",
+    "phpstan/phpstan-phpunit": "^2.0.6",
+    "phpstan/phpstan-symfony": "^2.0.6",
+    "phpunit/phpunit": "^11.5.27",
+    "ruflin/elastica": "^7.3.2",
+    "symfony/browser-kit": "^7.3",
+    "symfony/css-selector": "^7.3",
+    "symfony/doctrine-bridge": "^7.3",
+    "symfony/dom-crawler": "^7.3",
+    "symfony/intl": "^7.3",
+    "symfony/mime": "^7.3",
+    "symfony/phpunit-bridge": "^7.3",
+    "symfony/twig-bundle": "^7.3",
+    "symfony/var-dumper": "^7.3",
+    "symfony/yaml": "^7.3"
   },
   "conflict": {
     "doctrine/orm": "^3.0 <3.3"
